--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
+    "chart.js": "^4.3.0",
     "vue": "^3.3.4",
+    "vue-chartkick": "^1.1.0",
     "vue-router": "^4.2.2"
   },
   "devDependencies": {
